--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <script src="scripts/game/temp.js"></script>
     </head>
     <body onload="loadGame()">
-        <div id="app">
+        <div id="game">
             <div id="popups">
 
             </div>
