--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <script src="scripts/ui/element.js"></script>
         <script src="scripts/ui/formats.js"></script>
         <script src="scripts/game/temp.js"></script>
+        <script src="scripts/ui/notifications.js"></script>
     </head>
     <body onload="loadGame()">
         <div id="game">
